# forcedfun

./: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: test.yaml
forcedfun/: admin.py  errors.py  factories.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py  wsgi.py
forcedfun/management/commands/: seeds.py
forcedfun/migrations/: 0001_initial.py
forcedfun/settings/: common.py  local.py  production.py  utils.py
forcedfun/static/: terminal.css
forcedfun/templates/forcedfun/: base.html  game_detail.html  index.html  login.html  question_detail.html  register.html  selection_create.html
forcedfun/templatetags/: forcedfun_tags.py
tests/: conftest.py  test_admin.py  test_forcedfun.py  test_views.py
