[project]
name = "forcedfun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-extensions>=3.2.3",
    "django>=5.1.3",
    "sentry-sdk>=2.19.0",
    "whitenoise>=6.8.2",
    "django-stubs-ext>=5.1.1",
    "gunicorn>=23.0.0",
    "psycopg[binary]<3.2",
]

[dependency-groups]
lint = [
    "djade>=1.3.2",
    "django-stubs[compatible-mypy]>=5.1.1",
    "mypy>=1.13.0",
    "ruff>=0.8.1",
]
test = [
    "coverage>=7.6.9",
    "pytest-django>=4.9.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
viz = [
    "pydotplus>=2.0.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "forcedfun.settings.test"

[tool.coverage.run]
branch = true
omit = [
    "*/migrations/*",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "forcedfun.settings.local"

